[gd_scene load_steps=18 format=3 uid="uid://43ku0c7m8gqa"]

[ext_resource type="Script" uid="uid://bml0yexgmjr54" path="res://player/player.gd" id="1_g1dw6"]
[ext_resource type="Texture2D" uid="uid://bw03btxpkxde4" path="res://player/godot_bottom.png" id="1_rkbax"]
[ext_resource type="PackedScene" uid="uid://5ays6kuo0xio" path="res://common/shadow.tscn" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://b310rakud4l8v" path="res://player/player_sprite.gd" id="3_yw30f"]
[ext_resource type="Script" uid="uid://djmlb8fcjgvng" path="res://player/weapon_pivot.gd" id="5_boad6"]
[ext_resource type="PackedScene" uid="uid://bngctva7f3mni" path="res://weapons/player_weapons/semi_auto/weapon_semi_auto.tscn" id="7_wodsf"]
[ext_resource type="AudioStream" uid="uid://c6bk7awsqnbt8" path="res://player/pain_01.wav" id="11_wodsf"]
[ext_resource type="AudioStream" uid="uid://deol7mqpv4xhy" path="res://player/pain_02.wav" id="12_32hag"]
[ext_resource type="AudioStream" uid="uid://bv2sasgvsrp4i" path="res://player/pain_03.wav" id="13_tqiix"]
[ext_resource type="AudioStream" uid="uid://17y53e55al8d" path="res://player/pain_04.wav" id="14_e7oew"]
[ext_resource type="AudioStream" uid="uid://dgdkinlpjq4ob" path="res://player/pain_05.wav" id="15_c35mf"]
[ext_resource type="AudioStream" uid="uid://ursqvcxb3uov" path="res://player/death_01.wav" id="16_e7oew"]
[ext_resource type="AudioStream" uid="uid://b3w6lv1kglxf6" path="res://player/death_02.wav" id="17_c35mf"]
[ext_resource type="AudioStream" uid="uid://c56hqbbb5ktp1" path="res://player/death_03.wav" id="18_65viv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yw30f"]
radius = 31.0
height = 82.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_65viv"]
streams_count = 5
stream_0/stream = ExtResource("11_wodsf")
stream_1/stream = ExtResource("12_32hag")
stream_2/stream = ExtResource("13_tqiix")
stream_3/stream = ExtResource("14_e7oew")
stream_4/stream = ExtResource("15_c35mf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8t03j"]
streams_count = 3
stream_0/stream = ExtResource("16_e7oew")
stream_1/stream = ExtResource("17_c35mf")
stream_2/stream = ExtResource("18_65viv")

[node name="Player" type="CharacterBody2D"]
collision_mask = 66
motion_mode = 1
script = ExtResource("1_g1dw6")
max_speed = 400.0

[node name="HitBox" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -23)
shape = SubResource("CapsuleShape2D_yw30f")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -44)
texture = ExtResource("1_rkbax")
script = ExtResource("3_yw30f")

[node name="WeaponPivot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -44)
rotation = 6.5079627
script = ExtResource("5_boad6")

[node name="WeaponAnchor" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(70, 0)

[node name="Weapon_semi_auto" parent="WeaponPivot/WeaponAnchor" instance=ExtResource("7_wodsf")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DamageSoundEffect" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_65viv")
bus = &"Effects"

[node name="DeathSoundEffect" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_8t03j")
bus = &"Effects"

[node name="Shadow" parent="." instance=ExtResource("2_g1dw6")]
position = Vector2(0, 24)
rotation = 0.0022329444
